# CensusIncomePrediction

./: .gitignore  README.md  main.py  pyproject.toml  todo.md
_models/: feature_columns.joblib  xgb_balanced.joblib  xgb_default.joblib
app/: inference.py  streamlit_app.py
notebook/: 0_Profiling_and_EDA.ipynb  1_Preprocess_and_Feature_Engineering.ipynb  2_Modeling.ipynb  2_Modeling_and_Evaluation.ipynb  3_Inference.ipynb  Profiling_and_EDA.ipynb
